# Puzzle-Game

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  about.html  about.txt  info.txt  matrix_game.c
.github/workflows/: cmake-cross-platform.yml
code/: algorithm.c  algorithm.h  cheak.c  cheak.h  display.c  display.h  free.c  free.h  getkey.c  getkey.h  levels.c  levels.h  main.c  numgen.c  numgen.h
